[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1"]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -80.0
offset_right = 160.0
offset_bottom = 80.0

[node name="Title" type="Label" parent="VBox"]
text = "Lobby"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBox"]
text = "Waiting..."
horizontal_alignment = 1

[node name="PlayerLabel" type="Label" parent="VBox"]
text = "Players: 1/2"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBox"]
text = "Start Game"

[connection signal="pressed" from="VBox/StartButton" to="." method="_on_start_pressed"]
